@@ -28,6 +28,7 @@
     <item>4.0.0</item>
     <item>4.0.1</item>
     <item>4.0.2</item>
+    <item>4.0.3</item>
   </string-array>
 
 </resources>
